# stockpicker

./: .env.example  LICENSE  README.md  pyproject.toml
memory/: long_term_memory_storage.db
output/: decision.md  research_report.json  trending_companies.json
src/stock_picker/: crew.py  main.py
src/stock_picker/config/: agents.yaml  tasks.yaml
src/stock_picker/tools/: email_tool.py  push_tool.py
