[project]
name = "stock_picker"
version = "0.1.0"
description = "stock_picker using crewAI"
authors = [{ name = "Joe Kariuki", email = "joe@devbrew.ai" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.175.0,<1.0.0",
    "pydantic>=2.12.5",
]

[project.scripts]
stock_picker = "stock_picker.main:run"
run_crew = "stock_picker.main:run"
train = "stock_picker.main:train"
replay = "stock_picker.main:replay"
test = "stock_picker.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stock_picker"]

[tool.crewai]
type = "crew"
